--- a/package.json
+++ b/package.json
@@ -11,6 +11,12 @@
 	"author": "Dathan Spencer <dpspencer88@gmail.com>",
 	"license": "ISC",
 	"devDependencies": {
-		"webpack": "^4.20.2"
+		"webpack": "^4.20.2",
+		"webpack-cli": "^3.1.2"
+	},
+	"dependencies": {
+		"date-fns": "^1.29.0",
+		"jquery": "^3.3.1",
+		"jsdom": "^12.1.0"
 	}
 }
