--- a/.babelrc
+++ b/.babelrc
@@ -1,3 +1,11 @@
 {
-	"presets": ["@babel/preset-env"]
+	"presets": [
+		[
+			"@babel/preset-env",
+			{
+				"modules": false
+			}
+		]
+	],
+	"plugins": ["@babel/plugin-proposal-object-rest-spread"]
 }
