--- a/package.json
+++ b/package.json
@@ -5,21 +5,30 @@
 	"private": true,
 	"scripts": {
 		"test": "echo \"Error: no test specified\" && exit 1",
-		"build": "webpack --watch"
+		"watch": "webpack --watch",
+		"build": "webpack --mode production",
+		"start": "webpack-dev-server --open",
+		"develop": "webpack-dev-server --config webpack.config.js"
 	},
 	"keywords": [],
 	"author": "Dathan Spencer <dpspencer88@gmail.com>",
 	"license": "ISC",
 	"devDependencies": {
+		"jquery": "^3.3.1",
 		"@babel/core": "^7.1.2",
+		"@babel/plugin-proposal-object-rest-spread": "^7.0.0",
 		"babel-loader": "^8.0.4",
 		"babel-register": "^6.26.0",
+		"clean-webpack-plugin": "^0.1.19",
+		"html-webpack-plugin": "^3.2.0",
+		"npm-install-webpack-plugin": "^4.0.5",
 		"webpack": "^4.20.2",
-		"webpack-cli": "^3.1.2"
+		"webpack-cli": "^3.1.2",
+		"webpack-dev-server": "^3.1.9"
 	},
 	"dependencies": {
 		"date-fns": "^1.29.0",
 		"jquery": "^3.3.1",
-		"jsdom": "^12.1.0"
+		"jsdom": "^12.2.0"
 	}
 }
