--- a/.babelrc
+++ b/.babelrc
@@ -7,5 +7,8 @@
 			}
 		]
 	],
-	"plugins": ["@babel/plugin-proposal-object-rest-spread"]
+	"plugins": [
+		"@babel/plugin-proposal-object-rest-spread",
+		"@babel/plugin-transform-runtime"
+	]
 }
