--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
 	"name": "todolist",
 	"version": "1.0.0",
-	"description": "",
+	"description": "ToDo List",
 	"private": true,
 	"scripts": {
 		"test": "echo \"Error: no test specified\" && exit 1",
@@ -14,19 +14,24 @@
 	"author": "Dathan Spencer <dpspencer88@gmail.com>",
 	"license": "ISC",
 	"devDependencies": {
-		"jquery": "^3.3.1",
 		"@babel/core": "^7.1.2",
 		"@babel/plugin-proposal-object-rest-spread": "^7.0.0",
+		"@babel/plugin-transform-runtime": "^7.1.0",
 		"babel-loader": "^8.0.4",
 		"babel-register": "^6.26.0",
 		"clean-webpack-plugin": "^0.1.19",
+		"expose-loader": "^0.7.5",
 		"html-webpack-plugin": "^3.2.0",
+		"jquery": "^3.3.1",
 		"npm-install-webpack-plugin": "^4.0.5",
-		"webpack": "^4.20.2",
+		"speed-measure-webpack-plugin": "^1.2.3",
+		"typescript": "^3.1.3",
+		"webpack": "^4.22.0",
 		"webpack-cli": "^3.1.2",
 		"webpack-dev-server": "^3.1.9"
 	},
 	"dependencies": {
+		"@babel/runtime": "^7.1.2",
 		"date-fns": "^1.29.0",
 		"jquery": "^3.3.1",
 		"jsdom": "^12.2.0"
