--- a/package.json
+++ b/package.json
@@ -14,26 +14,27 @@
 	"author": "Dathan Spencer <dpspencer88@gmail.com>",
 	"license": "ISC",
 	"devDependencies": {
-		"@babel/core": "^7.1.2",
-		"@babel/plugin-proposal-object-rest-spread": "^7.0.0",
-		"@babel/plugin-transform-runtime": "^7.1.0",
-		"babel-loader": "^8.0.4",
+		"@babel/core": "^7.2.2",
+		"@babel/plugin-proposal-object-rest-spread": "^7.3.1",
+		"@babel/plugin-transform-runtime": "^7.2.0",
+		"babel-loader": "^8.0.5",
 		"babel-register": "^6.26.0",
-		"clean-webpack-plugin": "^0.1.19",
+		"clean-webpack-plugin": "^1.0.1",
 		"expose-loader": "^0.7.5",
 		"html-webpack-plugin": "^3.2.0",
 		"jquery": "^3.3.1",
 		"npm-install-webpack-plugin": "^4.0.5",
-		"speed-measure-webpack-plugin": "^1.2.3",
-		"typescript": "^3.1.3",
-		"webpack": "^4.23.1",
-		"webpack-cli": "^3.1.2",
-		"webpack-dev-server": "^3.1.10"
+		"speed-measure-webpack-plugin": "^1.3.0",
+		"typescript": "^3.2.4",
+		"webpack": "^4.29.0",
+		"webpack-cli": "^3.2.1",
+		"webpack-dev-server": "^3.1.14"
 	},
 	"dependencies": {
-		"@babel/runtime": "^7.1.2",
-		"date-fns": "^1.29.0",
+		"@babel/preset-env": "^7.3.1",
+		"@babel/runtime": "^7.3.1",
+		"date-fns": "^1.30.1",
 		"jquery": "^3.3.1",
-		"jsdom": "^12.2.0"
+		"jsdom": "^13.2.0"
 	}
 }
