--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
 	"keywords": [],
 	"author": "Dathan Spencer <dpspencer88@gmail.com>",
 	"license": "ISC",
+	"homepage": "https://dathan88.github.io/ToDo-List",
 	"devDependencies": {
 		"@babel/core": "^7.2.2",
 		"@babel/plugin-proposal-object-rest-spread": "^7.3.1",
